# myocardial-infarction_modelling

./: .gitignore  CMakeLists.txt  ReadMe.md  USAGE_GUIDE.md  analyze_clinical_data.py  analyze_clinical_data_simple.py  build.sh  demo.sh
cpp_server/: http_server.cpp
data/: .gitkeep
docs/: ALGORITHMS.md  CLINICAL_SIMULATION_RESULTS.md  LITERATURE_REVIEW.md  README.md  VALIDATION_REPORT.md
include/: CardiacElectrophysiology.h  DTM.h  DataProcessor.h  FitzHughNagumo.h  ValidationFramework.h
src/: CardiacElectrophysiology.cpp  DTM.cpp  DataProcessor.cpp  FitzHughNagumo.cpp  ValidationFramework.cpp  data_test.cpp  main.cpp
tests/: .gitkeep  CMakeLists.txt  simple_test_main.cpp
web/: README.md  index.html  requirements.txt  script.js  server.py  start_server.sh  styles.css
webassembly/: CLINICAL_ANALYSIS_UPDATE.md  README.md  SAMPLE_DATA_GUIDE.md  build_wasm.sh  classification_metrics.js  classification_metrics_fixed.js  index.html  mi_modeling_wasm.cpp  test_metrics.html  test_minimal.js  test_minimal.wasm  test_simple.html  wasm_demo.html  wasm_interface.cpp
webassembly/sample_data/: patient_001_ecg.csv  patient_002_mi_ecg.csv  patient_003_echo.json  patient_004_mri.txt  patient_005_ct.csv
